[package]
name = "hyperion-framework"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Robert Hannah (https://github.com/Bazzz-1)"]
description = "A lightweight Rust framework for building modular, component-based systems with TCP messaging and CLI control."

repository = "https://github.com/bazzz-1/hyperion-framework"
homepage = "https://github.com/bazzz-1/hyperion-framework"
documentation = "https://docs.rs/hyperion-framework"
readme = "README.md"
keywords = ["rust", "framework", "tcp", "cli", "components"]
categories = ["network-programming", "command-line-utilities"]


[dependencies]
async-trait     = "0.1.88"
colored         = "3.0.0"
log             = { version = "0.4.27", features = ["std"] }
serde           = { version = "1.0.219", features = ["derive"] }
serde_json      = "1.0.140"
serde-xml-rs    = "0.8.1"
tokio           = { version = "1.44.2", features = ["full"] }
