[package]
name = "hyperion-framework"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Robert Hannah (https://github.com/Bazzz-1)"]
description = "A lightweight component-based TCP framework for building service-oriented Rust applications with CLI control, async messaging, and lifecycle management."

repository = "https://github.com/bazzz-1/hyperion-framework"
homepage = "https://github.com/bazzz-1/hyperion-framework"
documentation = "https://github.com/Bazzz-1/hyperion-framework-examples"
readme = "README.md"
keywords = [
    "framework",
    "tcp",
    "components",
    "networking",
    "containerisation"
]
categories = [
    "network-programming",
    "asynchronous",
    "concurrency",
    "command-line-interface",
    "config"
]
exclude = [
    "**/*.json", "**/*.yml", ".gitignore", ".cargo_vcs_info.json"
]


[dependencies]
async-trait     = "0.1.88"
colored         = "3.0.0"
log             = { version = "0.4.27", features = ["std"] }
serde           = { version = "1.0.219", features = ["derive"] }
serde_json      = "1.0.140"
serde-xml-rs    = "0.8.1"
tokio           = { version = "1.44.2", features = ["full"] }
